tests/baselines/reference/unusedFunctionsinNamespaces2.errors.txt
tests/cases/compiler/unusedFunctionsinNamespaces2.ts(3,9): error TS6132: Variable 'function1' has never been used.


==== tests/cases/compiler/unusedFunctionsinNamespaces2.ts (1 errors) ====
    
    namespace Validation {
        var function1 = function() {
            ~~~~~~~~~
!!! error TS6132: Variable 'function1' has never been used.
        }
    }